# PRESTO

./: .coverage  .gitignore  .pre-commit-config.yaml  .zenodo.json  ADVANCED_FEATURES.md  CITATION.cff  CI_TROUBLESHOOTING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  PRESTO.py  README.html  README.md  RELEASE_NOTES.md  aggressive_fix_overlap.py  codemeta.json  coverage.xml  create_comprehensive_figure.py  generate_updated_figure.py  id_ed25519_key  id_ed25519_key.pub  paper.bib  paper.html  paper.md  pyproject.toml  quick_start_demo.py  requirements.txt  setup.py  test_unique_algorithms.py
.github/workflows/: ci.yml  draft-pdf.yml
PRESTO/: PRESTO.py
docs/: examples.md  getting_started.md  index.md  requirements.txt
examples/: advanced_healthcare_ml.py  basic_energy_analysis.py  benchmark_performance.py
ornl_presto/: __init__.py  config.py  core.py  core_backup.py  core_cleaned.py  data_validation.py  metrics.py  privacy_mechanisms.py  utils.py  visualization.py
ornl_presto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
paper/: paper.bib  paper.html  paper.md
presto/: core.py
presto.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_config.py  test_data_validation.py  test_metrics.py  test_privacy_extended.py  test_privacy_mechanisms.py
tutorial/: Medical_Privacy_Tutorial.ipynb  Tutorial_1_0.ipynb  Tutorial_2_0.ipynb  comparative_results.csv  comparative_results.json
tutorial/.ipynb_checkpoints/: PRESTO_Tutorial-checkpoint.ipynb
tutorial/tutorial/: comparative_results.csv  comparative_results.json
